fix search close-btn on mobile animation

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -138,7 +138,7 @@ h3 {
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 1;
+    z-index: 5;
     height: 125px;
 
     .menu__burger-btn {
