--- a/scss/media.scss
+++ b/scss/media.scss
@@ -459,9 +459,14 @@
                         position: absolute;
                         opacity: 1;
                         z-index: 0;
+                        transform: translateY(0);
 
                         span {
                             width: 25px;
+
+                            &:last-child {
+                                transform: rotate(-45deg) translate(4px, 4px);
+                            }
                         }
                     }
                 }
@@ -484,6 +489,11 @@
 
             .nav-search__btn {
                 transition: opacity 0.4s ease 0.3s;
+            }
+
+            .nav-search__field .btn-close {
+                transition: opacity 0s ease 0.3s;
+                transform: translateY(-1000px);
             }
 
         }
